# tgmt_assignment02_EdgeDetection

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  canny.cpp  canny.h  main.cpp  utils.cpp  utils.h
Test/: CMakeLists.txt  generators.cpp  generators.h  test_canny.cpp  test_filter.cpp  test_utils.cpp  test_utils.h
